# timer3-agent

./: .gitignore  README.md  pyproject.toml  run.py
archive/: debug_inspect.py  debug_output.html  debug_step.py  explore_dom.py  inspect_output.html
genelist/: README.md  fetch_hgnc.py  hgnc_aliases.tsv  hgnc_symbols.txt
reproduce/: api.py  benchmark.py  build_index.py  cancer_map.py  compute.py  diff.py  scrape_golden.py  server.py
timer3/: __init__.py  client.py  parse_table.py  selectize.py  shiny_ws.py
