[project]
name = "timer3-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "pyarrow>=24.0.0",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.46.0",
]
